--- a/.rvmrc
+++ b/.rvmrc
@@ -1,3 +1,1 @@
-rvm --create 1.8.7@leaderboard_gem
-rvm --create 1.9.2@leaderboard_gem
-rvm --create 1.9.3@leaderboard_gem
+rvm use --create --install --autolibs=4 ruby-1.9.3-p392@leaderboard_gem
